# ghostsnap

./: .gitignore  BOLT_INTEGRATION.md  Cargo.toml  QUICK_START_WORDPRESS.md  README.md  SECURITY.md  SPEC.md  START_HERE.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
assets/icons/: ghostsnap.icns
backends/: Cargo.toml
backends/src/: azure.rs  azure_simple.rs  b2.rs  backend.rs  lib.rs  local.rs  minio.rs  rclone.rs  retry.rs  s3.rs  sftp.rs
cli/: Cargo.toml
cli/src/: config.rs  hooks.rs  main.rs
cli/src/commands/: backup.rs  check.rs  copy.rs  diff.rs  dump.rs  forget.rs  hestia.rs  init.rs  job.rs  ls.rs  mod.rs  prune.rs  restore.rs  snapshots.rs  stats.rs
cli/tests/: azure_integration.rs  cli_binary.rs  command_smoke.rs  integration.rs  job_tests.rs  rclone_integration.rs  s3_integration.rs
core/: Cargo.toml
core/src/: chunker.rs  crypto.rs  error.rs  index.rs  lib.rs  lock.rs  pack.rs  repository.rs  snapshot.rs  storage.rs  types.rs
docs/: README.md  wordpress-backup-guide.md
docs/advisories/: README.md
docs/advisories/resolved/: rustsec-2023-0071-rsa.md  rustsec-2023-0089-atomic-polyfill.md
docs/architecture/: backup-flow.md  chunking.md  encryption.md  index.md  overview.md  packs.md
docs/backends/: azure.md  b2.md  local.md  minio.md  rclone.md  s3.md  sftp.md
docs/development/: building.md  contributing.md  testing.md
docs/examples/: docker-compose.toml  website-b2.toml
docs/getting-started/: configuration.md  installation.md  quickstart.md  wordpress-backup-guide.md  wordpress.md
docs/guides/: automation.md  website-backup.md
docs/hestia/: DOCUMENTATION_INDEX.md  README.md  SUMMARY.md  quickstart.md
docs/hestia/commands/: README.md  backup.md  list-backups.md  list-users.md  restore.md  user-info.md
docs/hestia/use-cases/: backup-strategies.md
docs/usage/: backup.md  docker-backup.md  job.md  repository.md  restore.md  snapshots.md
integrations/: Cargo.toml
integrations/src/: hestia.rs  lib.rs
scripts/: wordpress-backup.sh
tasks/: backup-jobs-spec.md  lessons.md  opencode.md  remote-locking-spec.md  restore-workflows-spec.md  strix_spec.md  todo.md  todo_old.md  website-backup-guide-spec.md
