[workspace]
members = [
    "cli",
    "core",
    "backends",
    "integrations",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Ghostsnap Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ghostsnap/ghostsnap"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17"
blake3 = "1.5"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
fastcdc = "3.1"
ignore = "0.4"
bytes = "1.8"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
aws-sdk-s3 = "1.63"
aws-config = "1.5"
azure_storage = "0.21"
azure_storage_blobs = "0.21"
azure_identity = "0.21"
azure_core = "0.21"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
toml = "0.8"
tempfile = "3.14"
walkdir = "2.5"
sha2 = "0.10"
md5 = "0.7"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0

[profile.bench]
inherits = "release"
