[package]
name = "ghostsnap-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ghostsnap"
path = "src/main.rs"

[dependencies]
ghostsnap-core = { path = "../core" }
ghostsnap-backends = { path = "../backends" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
rpassword = "7.3"
walkdir = { workspace = true }
globset = "0.4"
blake3 = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
xattr = "1.3"

[dev-dependencies]
tempfile = { workspace = true }
anyhow = { workspace = true }