[package]
name = "ghostsnap-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
fastcdc = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
uuid = { version = "1.11", features = ["v4", "serde"] }
hostname = "0.4"
flate2 = "1.0"
bincode = "1.3"