[package]
name = "ghostsnap-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
fastcdc = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
azure_core = { workspace = true }
azure_identity = { workspace = true }
azure_storage_blob = { workspace = true }
url = { workspace = true }
russh = { workspace = true }
russh-sftp = { workspace = true }
uuid = { version = "1.11", features = ["v4", "serde"] }
hostname = "0.4"
flate2 = "1.0"
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
bloomfilter = "1.0"
globset = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
xattr = "1.3"

[dependencies.lru]
version = "0.18"
